--- a/MediaPlay/MediaPlay.vcxproj
+++ b/MediaPlay/MediaPlay.vcxproj
@@ -179,30 +179,11 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\MediaFilter\Renderer\AVRendererFilter.h" />
     <ClInclude Include="..\include\MediaFilter\SourceMediaFilter.h" />
     <ClInclude Include="..\include\MediaFilter\TargetMediaFilter.h" />
-    <ClInclude Include="..\include\MediaGraph\FoundationalMediaGraph.h" />
-    <ClInclude Include="..\include\MediaGraph\SDKStreamMediaGraph.h" />
     <ClInclude Include="..\include\MediaGraph\MediaGraph.h" />
-    <ClInclude Include="..\include\MediaGraph\StandardStreamMediaGraph.h" />
-    <ClInclude Include="..\include\MediaModel\Capture\Hikvision\HikvisionSDKCapture.h" />
-    <ClInclude Include="..\include\MediaModel\Capture\MediaCapture.h" />
-    <ClInclude Include="..\include\MediaModel\Decoder\FFmpeg\FFmpegAudioDecoder.h" />
-    <ClInclude Include="..\include\MediaModel\Decoder\FFmpeg\FFmpegVideoDecoder.h" />
-    <ClInclude Include="..\include\MediaModel\Decoder\MediaDecoder.h" />
-    <ClInclude Include="..\include\MediaModel\Decoder\SDK\HikvisionSDKDecoder.h" />
-    <ClInclude Include="..\include\MediaModel\Demuxer\FFmpeg\FFmpegLocalFileDemuxer.h" />
-    <ClInclude Include="..\include\MediaModel\Demuxer\MediaDemuxer.h" />
-    <ClInclude Include="..\include\MediaModel\Formatter\FFmpeg\FFmpegImageFormatter.h" />
-    <ClInclude Include="..\include\MediaModel\Formatter\MediaFormatter.h" />
-    <ClInclude Include="..\include\MediaModel\MediaModel.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3D.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3DDevice.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3DDisplay.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3DFont.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3DPixelShader.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3DTexture.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\D3D\D3D\D3DVertexBuffer.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\D3D\VideoD3DRenderer.h" />
-    <ClInclude Include="..\include\MediaModel\Renderer\MediaRenderer.h" />
+    <ClInclude Include="..\include\MediaModule\Capture\FFmpeg\FFmpegLocalFileDemuxer.h" />
+    <ClInclude Include="..\include\MediaModule\Capture\Hikvision\HikvisionSDKCapture.h" />
+    <ClInclude Include="..\include\MediaModule\Capture\MediaCapture.h" />
+    <ClInclude Include="..\include\MediaModule\MediaModule.h" />
     <ClInclude Include="..\include\MediaPin\InputMediaPin.h" />
     <ClInclude Include="..\include\MediaPin\MediaPin.h" />
     <ClInclude Include="..\include\MediaPin\OutputMediaPin.h" />
@@ -238,30 +219,11 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\source\MediaFilter\Renderer\AVRendererFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\SourceMediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\TargetMediaFilter.cpp" />
-    <ClCompile Include="..\source\MediaGraph\FoundationalMediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaGraph\SDKStreamMediaGraph.cpp" />
     <ClCompile Include="..\source\MediaGraph\MediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaGraph\StandardStreamMediaGraph.cpp" />
-    <ClCompile Include="..\source\MediaModel\Capture\Hikvision\HikvisionSDKCapture.cpp" />
-    <ClCompile Include="..\source\MediaModel\Capture\MediaCapture.cpp" />
-    <ClCompile Include="..\source\MediaModel\Decoder\FFmpeg\FFmpegAudioDecoder.cpp" />
-    <ClCompile Include="..\source\MediaModel\Decoder\FFmpeg\FFmpegVideoDecoder.cpp" />
-    <ClCompile Include="..\source\MediaModel\Decoder\MediaDecoder.cpp" />
-    <ClCompile Include="..\source\MediaModel\Decoder\SDK\HikvisionSDKDecoder.cpp" />
-    <ClCompile Include="..\source\MediaModel\Demuxer\FFmpeg\FFmpegLocalFileDemuxer.cpp" />
-    <ClCompile Include="..\source\MediaModel\Demuxer\MediaDemuxer.cpp" />
-    <ClCompile Include="..\source\MediaModel\Formatter\FFmpeg\FFmpegImageFormatter.cpp" />
-    <ClCompile Include="..\source\MediaModel\Formatter\MediaFormatter.cpp" />
-    <ClCompile Include="..\source\MediaModel\MediaModel.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3D.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3DDevice.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3DDisplay.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3DFont.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3DPixelShader.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3DTexture.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\D3D\D3D\D3DVertexBuffer.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\D3D\VideoD3DRenderer.cpp" />
-    <ClCompile Include="..\source\MediaModel\Renderer\MediaRenderer.cpp" />
+    <ClCompile Include="..\source\MediaModule\Capture\FFmpeg\FFmpegLocalFileDemuxer.cpp" />
+    <ClCompile Include="..\source\MediaModule\Capture\Hikvision\HikvisionSDKCapture.cpp" />
+    <ClCompile Include="..\source\MediaModule\Capture\MediaCapture.cpp" />
+    <ClCompile Include="..\source\MediaModule\MediaModule.cpp" />
     <ClCompile Include="..\source\MediaPin\InputMediaPin.cpp" />
     <ClCompile Include="..\source\MediaPin\MediaPin.cpp" />
     <ClCompile Include="..\source\MediaPin\OutputMediaPin.cpp" />
