--- a/MediaPlay/MediaPlay.vcxproj
+++ b/MediaPlay/MediaPlay.vcxproj
@@ -89,7 +89,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;BOOST_ALL_NO_LIB;MEDIA_PLAY_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;__STDC_CONSTANT_MACROS;BOOST_ALL_NO_LIB;MEDIA_PLAY_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(SolutionDir)boost_1_67_0;$(SolutionDir)lib\ffmpeg_4_2_1;$(SolutionDir)lib\D3D;$(SolutionDir)lib\eaton\x64;$(SolutionDir)lib\hikvision\x64;$(SolutionDir)include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -173,8 +173,8 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\MediaFilter\Callback\AVDataCallbackFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Capture\AVCaptureFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Controller\AVPlayControllerFilter.h" />
+    <ClInclude Include="..\include\MediaFilter\Converter\AVConverterFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Decoder\AVDecoderFilter.h" />
-    <ClInclude Include="..\include\MediaFilter\Formatter\ImageFormatterFilter.h" />
     <ClInclude Include="..\include\MediaFilter\MediaFilter.h" />
     <ClInclude Include="..\include\MediaFilter\Renderer\AVRendererFilter.h" />
     <ClInclude Include="..\include\MediaFilter\SourceMediaFilter.h" />
@@ -182,7 +182,22 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClInclude Include="..\include\MediaGraph\MediaGraph.h" />
     <ClInclude Include="..\include\MediaModule\Capture\FFmpeg\FFmpegLocalFileDemuxer.h" />
     <ClInclude Include="..\include\MediaModule\Capture\Hikvision\HikvisionSDKCapture.h" />
+    <ClInclude Include="..\include\MediaModule\Capture\MediaCapture.h" />
+    <ClInclude Include="..\include\MediaModule\Converter\MediaConverter.h" />
+    <ClInclude Include="..\include\MediaModule\Converter\Nv12toYuv420pConverter.h" />
+    <ClInclude Include="..\include\MediaModule\Converter\Yv12toYuv420pConverter.h" />
+    <ClInclude Include="..\include\MediaModule\Decoder\FFmpeg\FFmpegAudioDecoder.h" />
+    <ClInclude Include="..\include\MediaModule\Decoder\FFmpeg\FFmpegVideoDecoder.h" />
+    <ClInclude Include="..\include\MediaModule\Decoder\SDK\HikvisionSDKDecoder.h" />
     <ClInclude Include="..\include\MediaModule\MediaModule.h" />
+    <ClInclude Include="..\include\MediaModule\Renderer\D3D\D3D\D3D.h" />
+    <ClInclude Include="..\include\MediaModule\Renderer\D3D\D3D\D3DDevice.h" />
+    <ClInclude Include="..\include\MediaModule\Renderer\D3D\D3D\D3DDisplay.h" />
+    <ClInclude Include="..\include\MediaModule\Renderer\D3D\D3D\D3DFont.h" />
+    <ClInclude Include="..\include\MediaModule\Renderer\D3D\D3D\D3DPixelShader.h" />
+    <ClInclude Include="..\include\MediaModule\Renderer\D3D\D3D\D3DTexture.h" />
+    <ClInclude Include="..\include\MediaModule\Renderer\D3D\D3D\D3DVertexBuffer.h" />
+    <ClInclude Include="..\include\MediaModule\Renderer\D3D\VideoD3DRenderer.h" />
     <ClInclude Include="..\include\MediaPin\InputMediaPin.h" />
     <ClInclude Include="..\include\MediaPin\MediaPin.h" />
     <ClInclude Include="..\include\MediaPin\OutputMediaPin.h" />
@@ -206,14 +221,15 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\boost_1_67_0\libs\thread\src\win32\thread_primitives.cpp" />
     <ClCompile Include="..\boost_1_67_0\libs\thread\src\win32\tss_dll.cpp" />
     <ClCompile Include="..\boost_1_67_0\libs\thread\src\win32\tss_pe.cpp" />
+    <ClCompile Include="..\include\MediaModule\Capture\MediaCapture.cpp" />
     <ClCompile Include="..\source\MediaData\MediaData.cpp" />
     <ClCompile Include="..\source\MediaDevice\Hikvision\HikvisionDevice.cpp" />
     <ClCompile Include="..\source\MediaDevice\MediaDevice.cpp" />
     <ClCompile Include="..\source\MediaFilter\Callback\AVDataCallbackFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Capture\AVCaptureFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Controller\AVPlayControllerFilter.cpp" />
+    <ClCompile Include="..\source\MediaFilter\Converter\AVConverterFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Decoder\AVDecoderFilter.cpp" />
-    <ClCompile Include="..\source\MediaFilter\Formatter\ImageFormatterFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\MediaFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\Renderer\AVRendererFilter.cpp" />
     <ClCompile Include="..\source\MediaFilter\SourceMediaFilter.cpp" />
@@ -221,7 +237,20 @@ copy $(SolutionDir)lib\$(ProjectName)\$(Platform)\$(Configuration)\$(ProjectName
     <ClCompile Include="..\source\MediaGraph\MediaGraph.cpp" />
     <ClCompile Include="..\source\MediaModule\Capture\FFmpeg\FFmpegLocalFileDemuxer.cpp" />
     <ClCompile Include="..\source\MediaModule\Capture\Hikvision\HikvisionSDKCapture.cpp" />
+    <ClCompile Include="..\source\MediaModule\Converter\Nv12toYuv420pConverter.cpp" />
+    <ClCompile Include="..\source\MediaModule\Converter\Yv12toYuv420pConverter.cpp" />
+    <ClCompile Include="..\source\MediaModule\Decoder\FFmpeg\FFmpegAudioDecoder.cpp" />
+    <ClCompile Include="..\source\MediaModule\Decoder\FFmpeg\FFmpegVideoDecoder.cpp" />
+    <ClCompile Include="..\source\MediaModule\Decoder\SDK\HikvisionSDKDecoder.cpp" />
     <ClCompile Include="..\source\MediaModule\MediaModule.cpp" />
+    <ClCompile Include="..\source\MediaModule\Renderer\D3D\D3D\D3D.cpp" />
+    <ClCompile Include="..\source\MediaModule\Renderer\D3D\D3D\D3DDevice.cpp" />
+    <ClCompile Include="..\source\MediaModule\Renderer\D3D\D3D\D3DDisplay.cpp" />
+    <ClCompile Include="..\source\MediaModule\Renderer\D3D\D3D\D3DFont.cpp" />
+    <ClCompile Include="..\source\MediaModule\Renderer\D3D\D3D\D3DPixelShader.cpp" />
+    <ClCompile Include="..\source\MediaModule\Renderer\D3D\D3D\D3DTexture.cpp" />
+    <ClCompile Include="..\source\MediaModule\Renderer\D3D\D3D\D3DVertexBuffer.cpp" />
+    <ClCompile Include="..\source\MediaModule\Renderer\D3D\VideoD3DRenderer.cpp" />
     <ClCompile Include="..\source\MediaPin\InputMediaPin.cpp" />
     <ClCompile Include="..\source\MediaPin\MediaPin.cpp" />
     <ClCompile Include="..\source\MediaPin\OutputMediaPin.cpp" />
