--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /ConsoleApplication1/x64/
 /JpegEncoder/x64/
 /MediaPlay/x64/
+/MediaCapture/x64/
 /MediaPlayDemo/x64/
 /arithmetic-server/x64/
 /.vscode/
